# llvmpy

./: .gitignore  1.cpp  1.md  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  O3compile.sh  README.md  README_EN.md  Token_recovery.py  alltest.sh  bug.md  calc1_5.cpp  calc1_5_copy.cpp  commit_type.md  committype.md  compile.sh  debug.sh  direct.sh  example.py  funtest.py  log.md  main.cpp  output.bc  output.ll  output.s  program  recovered_source.py  runtest.sh  runtime.c  runtime.cpp  test copy.py  test.py  testIR.sh
.config/: commit_convention.yaml
.history/: .gitignore_20250416233759  .gitignore_20250422220430  1_20250422230633.md  CMakeLists_20250422222520.txt  CMakeLists_20250422222521.txt  CMakeLists_20250422222523.txt  CMakeLists_20250422222526.txt  CMakeLists_20250422222558.txt  CMakeLists_20250422222600.txt  CMakeLists_20250422222621.txt  CMakePresets_20250422222456.json  CMakePresets_20250422222625.json  CMakePresets_20250422222627.json  CMakePresets_20250422222628.json  CMakePresets_20250422222632.json  CMakePresets_20250422222633.json  CMakePresets_20250422222635.json  CMakePresets_20250422222637.json  bug_20250420225955.md  bug_20250422233448.md  bug_20250422233453.md  bug_20250422233459.md  test_20250422231456.py  test_20250422231643.py  test_20250422231647.py  test_20250422233050.py  test_20250422233057.py  test_20250422233100.py  test_20250422233102.py  test_20250422233117.py  test_20250422233118.py  test_20250422233120.py  test_20250422233125.py  test_20250422233129.py  test_20250422233136.py  test_20250422233137.py  test_20250422233142.py  test_20250422233143.py  test_20250422233150.py  test_20250422233151.py  (+31 more)
.history/include/: Debugdefine_20250420225955.h  Debugdefine_20250422231826.h  Debugdefine_20250422231827.h  Debugdefine_20250422231829.h  Debugdefine_20250422231830.h
.history/include/CodeGen/: CodeGenBase_20250422221517.h  CodeGenBase_20250422221810.h  CodeGenBase_20250422221812.h  CodeGenBase_20250422221845.h  CodeGenBase_20250422222159.h  CodeGenBase_20250422222202.h  CodeGenModule_20250422225709.h
.history/src/CodeGen/: CodeGenBase_20250422221534.cpp  CodeGenBase_20250422223146.cpp  CodeGenBase_20250422223151.cpp  CodeGenBase_20250422223156.cpp  CodeGenBase_20250422223942.cpp  CodeGenExpr_20250422211028.cpp  CodeGenExpr_20250422221304.cpp  CodeGenExpr_20250422230737.cpp  CodeGenExpr_20250422231427.cpp  CodeGenExpr_20250422231430.cpp  CodeGenExpr_20250422231905.cpp  CodeGenExpr_20250422231906.cpp  CodeGenExpr_20250422231916.cpp  CodeGenExpr_20250422231918.cpp  CodeGenExpr_20250422231922.cpp  CodeGenExpr_20250422233032.cpp  CodeGenModule_20250422225734.cpp  CodeGenModule_20250422230901.cpp  CodeGenModule_20250422231326.cpp  CodeGenModule_20250422232617.cpp  CodeGenModule_20250422232652.cpp  CodeGenStmt_20250422225243.cpp  CodeGenStmt_20250422225244.cpp  CodeGenStmt_20250422225802.cpp  CodeGenStmt_20250422225933.cpp  back_20250422211505.cpp  back_20250422221140.cpp
Math_lisan_version/: calc_02.cpp
backup/: CMakeLists_copy_2.txt.back  CodeGenVisitor.cpp.back  CodeGenVisitor.h.back  ObjectRuntime.cpp.bak  ast.cpp.back  codegen.cpp.back  codegen.h.back  parser.cpp.back  parser.h.back
include/: Ast.h  Debugdefine.h  ObjectLifecycle.h  ObjectRuntime.h  ObjectType.h  Parser.h  TypeIDs.h  TypeOperations.h  ast.h  codegen.h  lexer.h  parser.h
include/CodeGen/: CodeGenBase.h  CodeGenExpr.h  CodeGenModule.h  CodeGenRuntime.h  CodeGenStmt.h  CodeGenType.h  CodeGenUtil.h  CodeGenVisitor.h  PyCodeGen.h  VariableUpdateContext.h  VariableUpdateStrategy.h  codegen.h
include/RunTime/: py_attributes.h  py_container.h  py_error.h  py_function.h  py_io.h  py_log.h  py_object.h  py_operators.h  py_type.h  py_type_dispatch.h  runtime.h  runtime_common.h  runtime_debug_config.h  runtime_level.h
main/: calc_02.cpp
src/: Ast.cpp  Lexer.cpp  ObjectLifecycle.cpp  ObjectRuntime.cpp  ObjectType.cpp  Parser.cpp  TypeOperations.cpp  ast.cpp  codegen.cpp  entry.c  lexer.cpp  main.cpp  parser.cpp  runtime.cpp
src/CodeGen/: CodeGenBase.cpp  CodeGenExpr.cpp  CodeGenModule.cpp  CodeGenRuntime.cpp  CodeGenStmt.cpp  CodeGenType.cpp  CodeGenVisitor.cpp  PyCodeGen.cpp  VariableUpdateContext.cpp  VariableUpdateStrategy.cpp
src/RunTime/: py_attributes.cpp  py_container.cpp  py_error.cpp  py_function.cpp  py_io.cpp  py_log.cpp  py_object.cpp  py_operators.cpp  py_type.cpp  py_type_dispatch.cpp
test/: 1.cpp  basic.py  break_continue.py  calc_01_ori.cpp  test.cpp  type.py
tests/: basic.py  break_continue.py  timebase.py
tests_auto/: Function_chaining.py  basic.py  break_continue.py  for.py  while_else.py
tests_auto/checkneeds/: _boolen.py  _boolen.sh  _comparison_eq_false.py  _comparison_eq_false.sh  _comparison_eq_true.py  _comparison_eq_true.sh  _func_cond_true.py  _func_cond_true.sh  _if_false_else_literal.py  _if_false_else_literal.sh  _if_true_literal.py  _if_true_literal.sh  _return0.sh  _return1.sh
